; ModuleID = '/home/carl/AnghaBench/redis/deps/jemalloc/src/extr_prof.c_prof_thr_uid_alloc.c'
source_filename = "/home/carl/AnghaBench/redis/deps/jemalloc/src/extr_prof.c_prof_thr_uid_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@next_thr_uid_mtx = common dso_local global i32 0, align 4
@next_thr_uid = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @prof_thr_uid_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @prof_thr_uid_alloc(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @malloc_mutex_lock(i32* %4, i32* @next_thr_uid_mtx)
  %6 = load i32, i32* @next_thr_uid, align 4
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* @next_thr_uid, align 4
  %8 = add nsw i32 %7, 1
  store i32 %8, i32* @next_thr_uid, align 4
  %9 = load i32*, i32** %2, align 8
  %10 = call i32 @malloc_mutex_unlock(i32* %9, i32* @next_thr_uid_mtx)
  %11 = load i32, i32* %3, align 4
  ret i32 %11
}

declare dso_local i32 @malloc_mutex_lock(i32*, i32*) #1

declare dso_local i32 @malloc_mutex_unlock(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
